Maj headers et début contacts

--- a/contacts.html
+++ b/contacts.html
@@ -2,10 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="Projet_Groupe_1/blog.html">
-    <title>blog</title>
+    <title>Restoral</title>
+    <meta name="description" content="Le bon resto">
     <link rel="stylesheet" href="assets/css/Reset.css">
-    <link rel=" stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/contacts.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
@@ -35,37 +35,22 @@
     </header>
 
     <main>
-        <section class="flex">
-            <div class="rectangle">
-                <h1>Grid Blog</h1>
-                <p>Home News Grid Blog</p>
+        <section id="pageTitle" class="centerBloc">
+            <div id="opacity" class="centerBloc">
+            <div id="titleContainer">
+                <div id="titleText" class="centerBloc"><h1>Contacts</h1></div>
+                    <div id="Arianne" class="centerBloc">
+                        <a href="Index.html">Home</a>
+                        <div class="titleImg centerBloc"><img src="assets/images/Arrow.svg" alt="" class="mainImg"></div>
+                        <p>Contacts</p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <div id="bloc">
-            <div class="degrade-horizontal"></div>
-            <div class="toasts">
-                <h1>Toast</h1>
-                <h2>The History of Sandwiches</h2>
-                 By <p> John Doe </p> 
-                <p class="texte1">2 days ago</p>
-            </div>
-            <div class="burgers1">
-                <h1>Burgers</h1>
-                <h2>Making Tasty Thanksgiving Turkey Burgers</h2>
-                <p> by John Doe   2 days ago</p>
-            </div>
-            <div class="burgers2">
-                <h1>Burgers</h1>
-                <h2>The Best American Burgers</h2>
-                <p> by John Doe   2 days ago</p>
-            </div>
-            <div class="pizza">
-                <h1>Pizza</h1>
-                <h2>Interesting Facts About Pizza</h2>
-                <p> by John Doe   2 days ago</p>
-            </div>
-        </div>
+
+    <main>
+        
     </main>
 
     <footer>
