--- a/team.html
+++ b/team.html
@@ -23,12 +23,12 @@
                         <li class="dot"><a href="">MENU</a></li>
                         <li class="dot"><a href="">PAGES</a></li>
                         <li class="dot"><a href="">NEWS</a></li>
-                        <li class="dot"><a href="">CONTACTS</a></li>
+                        <li class="dot"><a href="contacts.html">CONTACTS</a></li>
                     </ul>
                 </nav>
                 <div class="headerEnds centerBloc" id="numero">
                     <a href="" class="flex">
-                        <img src="" alt="">
+                        <div id="numeroPhone"><img src="assets/images/ringingPhone.svg" class="img" alt=""></div>
                         <h3>+1 (409) 987-5874</h3>
                     </a>
                 </div>
@@ -141,8 +141,8 @@
                             <div id="opening">
                                 <h2>OPENING HOURS</h2>
                             </div>
-                            <div id="hours">
-                                <img src="" alt="">
+                            <div id="hours" class="flex">
+                                <div id="hoursClock"><img src="assets/images/miniClock.svg" alt="" class="mainImg"></div>
                                 <p>9:00am-7:00pm</p>
                             </div>
                         </div>
@@ -160,10 +160,10 @@
                                 <h2>FOLLOW US</h2>
                             </div>
                             <div id="followMedia" class="centerBloc">
-                                <div class="media"><a href=""><img src="assets/images/instagram.svg" alt="Instagram" class="footerImg"></a></div>
-                                <div class="media"><a href=""><img src="assets/images/facebook.svg" alt="Facebook" class="footerImg"></a></div>
-                                <div class="media"><a href=""><img src="assets/images/twitter.svg" alt="Twitter" class="footerImg"></a></div>
-                                <div class="media"><a href=""><img src="assets/images/google.svg" alt="Google+" class="footerImg"></a></div>
+                                <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="Instagram" class="footerImg"></a></div>
+                                <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="Facebook" class="footerImg"></a></div>
+                                <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="Twitter" class="footerImg"></a></div>
+                                <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="Google+" class="footerImg"></a></div>
                             </div>
                         </div>
                     </section>
