page contacts finie

--- a/team.html
+++ b/team.html
@@ -18,8 +18,8 @@
                 </div>
                 <nav class="centerBloc">
                     <ul class="centerBloc">
-                        <li><a href="" id="home">HOME</a></li>
-                        <li class="dot"><a href="#aboutRestoral">ABOUT US</a></li>
+                        <li><a href="Index.html" id="home">HOME</a></li>
+                        <li class="dot"><a href="blog.html">ABOUT US</a></li>
                         <li class="dot"><a href="">MENU</a></li>
                         <li class="dot"><a href="">PAGES</a></li>
                         <li class="dot"><a href="">NEWS</a></li>
