--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,8 @@
             </div>
             <nav class="centerBloc">
                 <ul class="centerBloc">
-                    <li><a href="" id="home">HOME</a></li>
-                    <li class="dot"><a href="#aboutRestoral">ABOUT US</a></li>
+                    <li><a href="Index.html" id="home">HOME</a></li>
+                    <li class="dot"><a href="blog.html">ABOUT US</a></li>
                     <li class="dot"><a href="">MENU</a></li>
                     <li class="dot"><a href="">PAGES</a></li>
                     <li class="dot"><a href="">NEWS</a></li>
@@ -198,7 +198,7 @@
 
         <section id="ourChefs" class="centerBloc">
             <div class="mainContainer">
-                <div id="chefsTitle" class="centerBloc"><h2>Our Chefs</h2></div>
+                <div id="chefsTitle" class="centerBloc"><a href="team.html"><h2>Our Chefs</h2></a></div>
                 <div id="chefsContainer" class="centerBloc">
                     <section class="chefsSection">
                         <div class="chefsPhoto centerBloc">
