--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <header class="centerBloc">
         <div id="headerContainer" class="centerBloc">
             <div class="headerEnds centerBloc">
-                <a href="Index.html" class="centerBloc"><img src="assets/images/logo-280x60.png" alt="" class="img"></a>
+                <a href="Index.html" class="centerBloc"><img src="assets/images/logo-280x60.png" alt="Logo entreprise Restoral" class="img"></a>
             </div>
             <nav class="centerBloc">
                 <ul class="centerBloc">
@@ -27,7 +27,7 @@
             </nav>
             <div class="headerEnds centerBloc" id="numero">
                 <a href="" class="flex">
-                    <div id="numeroPhone"><img src="assets/images/ringingPhone.svg" class="img" alt=""></div>
+                    <div id="numeroPhone"><img src="assets/images/ringingPhone.svg" class="img" alt="phone icon"></div>
                     <h3>+1 (409) 987-5874</h3>
                 </a>
             </div>
@@ -35,12 +35,14 @@
     </header>
 
     <main>
-        <section id="carousel"></section>
+        <section id="carousel" class="centerBloc">
+            <h2>From our chefs</h2>
+        </section>
 
         <section id="aboutRestoral" class="centerBloc">
             <div id="aboutContainer" class="flex">
                 <div id="aboutImg">
-                    <img src="assets/images/about-1.png" alt="" class="mainImg">
+                    <img src="assets/images/about-1.png" alt="About background" class="mainImg">
                 </div>
                 <div id="aboutText" class="centerBloc">
                     <div id="textContainer">
@@ -76,13 +78,13 @@
             <div id="valeurContainer" class="mainContainer centerBloc">
                 <div class="valeur">
                     <div class="valeursIcon centerBloc">
-                        <img src="assets/images/Clock.svg" class="heightImg" alt="">
+                        <img src="assets/images/Clock.svg" class="heightImg" alt="clock icon">
                     </div>
                     <div class="valeursTitle centerBloc">
                         <h3>FAST DELIVERY</h3>
                     </div>
                     <div class="valeursBar flex">
-                        <img src="assets/images/divider.svg" alt="" class="divider">
+                        <img src="assets/images/divider.svg" alt="divider icon" class="divider">
                     </div>
                     <div class="valeursText centerText">
                         <p>Everything you order at Restoral will be quickly delivered to your door.</p>
@@ -90,13 +92,13 @@
                 </div>
                 <div class="valeur">
                     <div class="valeursIcon centerBloc">
-                        <img src="assets/images/GroceryBag.svg" class="heightImg" alt="">
+                        <img src="assets/images/GroceryBag.svg" class="heightImg" alt="GroceryBag icon">
                     </div>
                     <div class="valeursTitle centerBloc">
                         <h3>FRESH FOOD</h3>
                     </div>
                     <div class="valeursBar flex">
-                        <img src="assets/images/divider.svg" alt="" class="divider">
+                        <img src="assets/images/divider.svg" alt="divider icon" class="divider">
                     </div>
                     <div class="valeursText centerText">
                         <p>We use only the best ingredients to cook the tasty fresh food for you.</p>
@@ -104,13 +106,13 @@
                 </div>
                 <div class="valeur">
                     <div class="valeursIcon centerBloc">
-                        <img src="assets/images/ChefHat.svg" class="heightImg" alt="">
+                        <img src="assets/images/ChefHat.svg" class="heightImg" alt="ChefHat icon">
                     </div>
                     <div class="valeursTitle centerBloc">
                         <h3>EXPERIENCED CHEFS</h3>
                     </div>
                     <div class="valeursBar flex">
-                        <img src="assets/images/divider.svg" alt="" class="divider">
+                        <img src="assets/images/divider.svg" alt="divider icon" class="divider">
                     </div>
                     <div class="valeursText centerText">
                         <p>Our staff consist of chefs and cooks with years of experience.</p>
@@ -118,13 +120,13 @@
                 </div>
                 <div class="valeur">
                     <div class="valeursIcon centerBloc">
-                        <img src="assets/images/Plate.svg" class="heightImg" alt="">
+                        <img src="assets/images/Plate.svg" class="heightImg" alt="Plate icon">
                     </div>
                     <div class="valeursTitle centerBloc">
                         <h3>A VARIETY OF DISHES</h3>
                     </div>
                     <div class="valeursBar flex">
-                        <img src="assets/images/divider.svg" alt="" class="divider">
+                        <img src="assets/images/divider.svg" alt="divider icon" class="divider">
                     </div>
                     <div class="valeursText centerText">
                         <p>In our menu you'll find a wide variety of dishes, desserts and drinks.</p>
@@ -209,10 +211,10 @@
                         <div class="chefsName centerBloc"><h3>Orni Stark</h3></div>
                         <div class="chefsTitle centerBloc"><p>Founder</p></div>
                         <div class="chefsMedia centerBloc">
-                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="instagram icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="facebook icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="twitter icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="google icon" class="mainImg"></a></div>
                         </div>
                     </section>
                     <section class="chefsSection">
@@ -224,10 +226,10 @@
                         <div class="chefsName centerBloc"><h3>Biltam Robinson</h3></div>
                         <div class="chefsTitle centerBloc"><p>Head Chef</p></div>
                         <div class="chefsMedia centerBloc">
-                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="instagram icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="facebook icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="twitter icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="google icon" class="mainImg"></a></div>
                         </div>
                     </section>
                     <section class="chefsSection">
@@ -239,10 +241,10 @@
                         <div class="chefsName centerBloc"><h3>Rabina Ives</h3></div>
                         <div class="chefsTitle centerBloc"><p>Pastry Chef</p></div>
                         <div class="chefsMedia centerBloc">
-                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="instagram icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="facebook icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="twitter icon" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="google icon" class="mainImg"></a></div>
                         </div>
                     </section>
                 </div>
@@ -253,22 +255,22 @@
             <div class="mainContainer">
                 <div id="partner">
                     <h2>Our Partners</h2>
-                    <p>We are glad to offer our visitor high-quality burger and pizzas, but we also believe our </br> whole business couldn't be successful without our parners.</p>
+                    <p>We are glad to offer our visitor high-quality burger and pizzas, but we also believe our <br> whole business couldn't be successful without our parners.</p>
                 </div>
                 <div id="partnerLogos" class="centerBloc">
-                    <div class="partners"><a href=""><img src="assets/images/brand-1-128x111.png" alt="" class="mainImg"></a></div>
-                    <div class="partners"><a href=""><img src="assets/images/brand-2-129x102.png" alt="" class="mainImg"></a></div>
-                    <div class="partners"><a href=""><img src="assets/images/brand-3-143x110.png" alt="" class="mainImg"></a></div>
-                    <div class="partners"><a href=""><img src="assets/images/brand-4-142x102.png" alt="" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-1-128x111.png" alt="logo entreprise wildlife" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-2-129x102.png" alt="logo entreprise outdoor" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-3-143x110.png" alt="logo entreprise wildland" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-4-142x102.png" alt="logo entreprise mountain" class="mainImg"></a></div>
                 </div>
             </div>
         </section>
 
         <section id="gallery" class="flex">
-            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
-            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
-            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
-            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="gallery 1" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="gallery 2" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="gallery 3" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="gallery 4" class="mainImg"></div>
         </section>
 
         <section id="ourTestimonials" class="centerBloc">
@@ -279,7 +281,7 @@
                 <div id="testimonialsTiles" class="flex">
                     <div class="testimonialsTiles">
                         <div class="tileImg centerBloc">
-                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="user photo" class="mainImg"></div>
                         </div>
                         <div class="tileTitle centerBloc">
                             <h3>The best Burgers in the Area</h3>
@@ -294,7 +296,7 @@
                     </div>
                     <div class="testimonialsTiles">
                         <div class="tileImg centerBloc">
-                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="user photo" class="mainImg"></div>
                         </div>
                         <div class="tileTitle centerBloc">
                             <h3>There are Burgers for Vegetarians</h3>
@@ -309,7 +311,7 @@
                     </div>
                     <div class="testimonialsTiles">
                         <div class="tileImg centerBloc">
-                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="user photo" class="mainImg"></div>
                         </div>
                         <div class="tileTitle centerBloc">
                             <h3>Your French Fries are the Best!</h3>
@@ -332,7 +334,7 @@
             <div id="up" class="footerContainer centerBloc">
                 <section class="footerTiles" id="leftTile">
                     <div class="segment">
-                        <div id="restoral"><img src="assets/images/logo-inverse-280x60.png" alt="" class="footerImg"></div>
+                        <div id="restoral"><img src="assets/images/logo-inverse-280x60.png" alt="logo entreprise Restoral" class="footerImg"></div>
                         <div id="restoralDesc"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur perferendis blablalbalbalbabla blablalbalbalbabla blablalbalbalbabla</p></div>
                     </div>
                     <div class="segment">
@@ -345,7 +347,7 @@
                     <div class="segment">
                         <div class="menu centerBloc"><h2>OUR MENU</h2></div>
                         <div id="menuList">
-                            <p><a href="">BURGERS</a>  /  <a href="">PIZZAS</a>  /  <a href="">TOASTS</a>  /  <a href="">SALADS</a>  /  </br> <a href="">DRINKS</a>  /  <a href="">DESSERTS</a></p>
+                            <p><a href="">BURGERS</a>  /  <a href="">PIZZAS</a>  /  <a href="">TOASTS</a>  /  <a href="">SALADS</a>  /  <br> <a href="">DRINKS</a>  /  <a href="">DESSERTS</a></p>
                         </div>
                     </div>
                     <div class="segment" style="margin-top: 30px;">
@@ -353,7 +355,7 @@
                             <h2>OPENING HOURS</h2>
                         </div>
                         <div id="hours" class="flex">
-                            <div id="hoursClock"><img src="assets/images/miniClock.svg" alt="" class="mainImg"></div>
+                            <div id="hoursClock"><img src="assets/images/miniClock.svg" alt="clock icon" class="mainImg"></div>
                             <p>9:00am-7:00pm</p>
                         </div>
                     </div>
