--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
     <header class="centerBloc">
         <div id="headerContainer" class="centerBloc">
             <div class="headerEnds centerBloc">
-                <a href="Index.html" class="centerBloc"><img src="assets/images/logo-280x60.png" alt="" class="img"></a>
+                <a href="Index.html" class="centerBloc"><img src="assets/images/logo-280x60.png" alt="Logo entreprise Restoral" class="img"></a>
             </div>
             <nav class="centerBloc">
                 <ul class="centerBloc">
@@ -27,7 +27,7 @@
             </nav>
             <div class="headerEnds centerBloc" id="numero">
                 <a href="" class="flex">
-                    <div id="numeroPhone"><img src="assets/images/ringingPhone.svg" class="img" alt=""></div>
+                    <div id="numeroPhone"><img src="assets/images/ringingPhone.svg" class="img" alt="phone icon"></div>
                     <h3>+1 (409) 987-5874</h3>
                 </a>
             </div>
@@ -162,7 +162,7 @@
             <div id="up" class="footerContainer centerBloc">
                 <section class="footerTiles" id="leftTile">
                     <div class="segment">
-                        <div id="restoral"><img src="assets/images/logo-inverse-280x60.png" alt="" class="footerImg"></div>
+                        <div id="restoral"><img src="assets/images/logo-inverse-280x60.png" alt="logo entreprise Restoral" class="footerImg"></div>
                         <div id="restoralDesc"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur perferendis blablalbalbalbabla blablalbalbalbabla blablalbalbalbabla</p></div>
                     </div>
                     <div class="segment">
@@ -175,7 +175,7 @@
                     <div class="segment">
                         <div class="menu centerBloc"><h2>OUR MENU</h2></div>
                         <div id="menuList">
-                            <p><a href="">BURGERS</a>  /  <a href="">PIZZAS</a>  /  <a href="">TOASTS</a>  /  <a href="">SALADS</a>  /  </br> <a href="">DRINKS</a>  /  <a href="">DESSERTS</a></p>
+                            <p><a href="">BURGERS</a>  /  <a href="">PIZZAS</a>  /  <a href="">TOASTS</a>  /  <a href="">SALADS</a>  /  <br> <a href="">DRINKS</a>  /  <a href="">DESSERTS</a></p>
                         </div>
                     </div>
                     <div class="segment" style="margin-top: 30px;">
@@ -183,7 +183,7 @@
                             <h2>OPENING HOURS</h2>
                         </div>
                         <div id="hours" class="flex">
-                            <div id="hoursClock"><img src="assets/images/miniClock.svg" alt="" class="mainImg"></div>
+                            <div id="hoursClock"><img src="assets/images/miniClock.svg" alt="clock icon" class="mainImg"></div>
                             <p>9:00am-7:00pm</p>
                         </div>
                     </div>
